# maven_nlp

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
Course Materials/Data/: movie_reviews_sentiment.csv
Course Materials/Slide and Demo Notebooks/: section3_text_preprocessing_code.ipynb
